Fix: Alignment Fixed (#11648)
* Fix: Alignment Fixed

* Fix: Pinned Widget also aligned

---------

--- a/res/css/views/rooms/_AppsDrawer.pcss
+++ b/res/css/views/rooms/_AppsDrawer.pcss
@@ -218,6 +218,9 @@ limitations under the License.
 
         > :last-child {
             margin-left: 9px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     }
 
