--- a/res/css/views/right_panel/_RoomSummaryCard.pcss
+++ b/res/css/views/right_panel/_RoomSummaryCard.pcss
@@ -122,8 +122,14 @@ limitations under the License.
                 padding: 10px 48px 10px 12px; /* based on typical mx_RoomSummaryCard_Button padding */
                 text-overflow: ellipsis;
                 overflow: hidden;
-
+                display: flex;
+                justify-content: center;
                 span {
+                    /* Center aligned and Spacing matched with the About section above the Widgets section */
+                    margin-right: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     color: $primary-content;
                 }
             }
